# jyotish-helper

./: .gitignore  AGENTS.md  README.md
.agents/skills/: .gitkeep
.agents/skills/deploy/: SKILL.md
.agents/skills/jyotish-design-standards/: SKILL.md  tokens.css
.agents/skills/run-dev-server/: SKILL.md
.agents/skills/update-documentation/: SKILL.md
.agents/skills/update-readme/: SKILL.md
course/: Homework 1 - Build the Working Surface for Your App.md  Homework 2 - Spec, Delegate, Verify, Refine.md  Homework 3 - Build a Recurring Async Repository Review Workflow.md  course-reader.md
designs/: index.html
designs/design-01/: index.html
designs/design-02/: index.html
designs/design-03/: index.html
designs/design-04/: index.html
designs/design-05/: index.html
docs/: architecture.md
docs/superpowers/plans/: 2026-06-29-transit-chart.md  2026-07-07-dark-mode.md
docs/superpowers/specs/: 2026-06-29-transit-chart-design.md  2026-07-07-dark-mode-design.md
generator/: pyproject.toml
generator/src/jyotish_gen/: build.py  degrees.py  ephemeris.py  transitions.py
generator/tests/: test_build.py  test_degrees.py  test_ephemeris.py  test_smoke.py  test_transitions.py
web/: index.html  package-lock.json  package.json
web/public/data/: degrees.json  transitions.json
web/src/: App.test.tsx  App.tsx  index.css  main.tsx
web/src/components/: GrahaDegrees.test.tsx  GrahaDegrees.tsx  LagnaSelect.tsx  NorthIndianChart.test.tsx  NorthIndianChart.tsx  PlanetFilter.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx  TimeSlider.test.tsx  TimeSlider.tsx  (+1 more)
(+16 files in other folders)
