[project]
name = "jyotish-gen"
version = "0.1.0"
description = "Offline Swiss Ephemeris transition generator for Jyotish Helper"
requires-python = ">=3.12,<3.14"
dependencies = ["pyswisseph>=2.10"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jyotish_gen"]
